Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Zope 3.3.2 (unreleased)

    Bugfixes

      - #98535: Deprecation warning was broken for
        zope.app.site.tests.placefulsetup

      - #99408: zope.app.component.vocabulary.UtilityNames.getTermByToken was
        broken

      - #99402: zope.app.component.vocabulary.UtilityNameTerm was implement
        the wrong interface incorrectly

      - zope.app.form.browser.textwidgets: The TextAreaWidget was not escaping
        its content when the validation failed. This way <, > and & were put
        out unquoted.

      - Fixed bug #721: Handling of empty prefixes in zope.formlib and
        zope.app.form

      - Fixed zope.app.cache.ram.RAMCache which ignored the
        cleanupinterval.

      - zope.testing: moved import of the pystone module due a import
        conflict with the Zope 2 testrunner
        (http://www.zope.org/Collectors/Zope/2268)

      - Added ObjectModifiedEvent when a text file object is modified
        through the edit form in the ZMI.

      - Fixed zope.app.file.browser.file. Last-Modified time was wrong.

    Restructuring

      - Changed default charset of text file (``zope.app.file.file``)
        to utf-8.

  Zope 3.3.1 (2007-01-14)

    Bugfixes

      - Fixed widget bug in zope.app.form.browser; _getCurrentValue always
        returns an input value now. This fixes a bug in _getFormValue.

        (This required a backport of a small restructuring: Changed internal
        widget API to allow retrieving the current value (from request,
        default or current field value) in addition to the current form
        representation of the value.)

      - Fixed bug #707: "layer" directive was marked as deprecated in a
        confusing way.
