@@ -190,8 +190,8 @@ class MultiDataHelper(object):
     def _toFieldValue(self, input):
         """See SimpleInputWidget"""
         if input is None:
-            return []
-        if not isinstance(input, list):
+            input = []
+        elif not isinstance(input, list):
             input = [input]
         try:
             values = self.convertTokensToValues(input)
